2003-01-23  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/lset.n: Fixed fault in return values from lset in
	documentation examples [SF Bug #658463] and tidied up a bit at the
	same time.

2003-01-21  Joe English  <jenglish@users.sourceforge.net>
	* doc/namespace.n (namespace inscope): Clarified documentation
	[SF Patch #670110]

2003-01-21  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/tcl.m4 (SC_CONFIG_CFLAGS): Set SHLIB_SUFFIX
	so that TCL_SHLIB_SUFFIX will be set to a useful
	value in the generated tclConfig.sh.
	Set SHLIB_LD_LIBS to "" or '${LIBS}' based on
	the --enable-shared flag. This matches the
	UNIX implementation.

2003-01-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclCkalloc.c: change %ud to %u as appropriate.

2003-01-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tclWinDde.c (DdeServerProc): Deallocate
	the Tcl_Obj returned by ExecuteRemoteObject
	if it was not saved in a connection object.

2003-01-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tcl.h: Revert earlier change that
	defined TCL_WIDE_INT_TYPE as long long and
	TCL_LL_MODIFIER as L when compiling with
	mingw. This change ended up causing some
	test case failures when compiling with mingw.
	* generic/tclObj.c (UpdateStringOfWideInt):
	Describe the warning generated by mingw and
	why it needs to be ignored so that someone
	is not tempted to "fix" this problem again
	in the future.

2003-01-16  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclStringObj.c: Tcl_SetObjLength fix for when
	the object has a unicode string rep. Fixes [Bug 635200]
	* tests/stringObj.test: removed 'knownBug' constraint from
	test 14.1 now that this bug is fixed.
	
        * generic/tclInt.h:
	* generic/tclBasic.c:
	* generic/tclCmdMZ.z:
	* tests/trace.test: execution and command tracing bug fixes and
	cleanup.  In particular fixed [Bug 655645], [Bug 615043], 
	[Bug 571385]
	  - fixed some subtle cleanup problems with tracing. This 